...
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3dj-q3-1BZ">
                                <rect key="frame" x="78" y="116" width="259" height="63"/>
                                <size key="titleShadowOffset" width="0.0" height="30"/>
                                <buttonConfiguration key="configuration" style="filled" cornerStyle="large" buttonSize="medium">
                                    <attributedString key="attributedTitle">
                                        <fragment content="search by ingredients">
                                            <attributes>
                                                <font key="NSFont" size="24" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                                            <rect key="frame" x="0.0" y="56" width="93.5" height="28"/>
                                                            <subviews>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1H-2C-gcn" userLabel="try">
                                                                    <rect key="frame" x="0.0" y="0.0" width="50.5" height="28"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="try"/>
                                                                    <state key="normal" title="Button"/>
                                                                    <buttonConfiguration key="configuration" style="filled" title="TRY">
                                                                        <color key="baseBackgroundColor" red="0.28980320030000001" green="0.32437218979999999" blue="0.0053442238039999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                    </buttonConfiguration>
                                                                </button>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ccR-1S-mKO">
                                                                    <rect key="frame" x="50.5" y="0.0" width="43" height="28"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="save"/>
                                                                    <state key="normal" title="Button"/>
                                                                    <buttonConfiguration key="configuration" style="filled" image="bookmark" catalog="system">
                                                                        <color key="baseForegroundColor" red="0.28980320030000001" green="0.32437218979999999" blue="0.0053442238039999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                    </buttonConfiguration>
                                                                    <connections>
                                                                        <action selector="saveButtonPressed:" destination="umb-oU-Bqg" eventType="touchUpInside" id="RgN-a3-ivR"/>
                                                                    </connections>
                                                                </button>
...
                            <constraint firstItem="thu-PN-97W" firstAttribute="top" secondItem="xUz-pI-f6f" secondAttribute="top" id="X8L-WD-qb7"/>
                            <constraint firstItem="xUz-pI-f6f" firstAttribute="bottom" secondItem="thu-PN-97W" secondAttribute="bottom" id="ZeQ-Pu-Bhf"/>
                            <constraint firstItem="thu-PN-97W" firstAttribute="leading" secondItem="xUz-pI-f6f" secondAttribute="leading" id="eGv-Jd-UXR"/>
                            <constraint firstItem="xUz-pI-f6f" firstAttribute="trailing" secondItem="thu-PN-97W" secondAttribute="trailing" id="rCN-Oo-Etn"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Liked Recipes" id="wRr-Gj-kAU">
                        <barButtonItem key="rightBarButtonItem" image="xmark.bin" catalog="system" id="8Os-2l-d5Z" userLabel="delete">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="DeleteAllButtonPressed:" destination="r1n-Gy-kg6" id="p2S-UA-IQN"/>
                            </connections>
                        </barButtonItem>
...
                            <color key="tintColor" red="0.94901961089999998" green="0.94901961089999998" blue="0.94901961089999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <action selector="addButtonPressed:" destination="GCI-CF-1m4" id="nD4-PE-niK"/>
                            </connections>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem title="Item" image="return.right" catalog="system" id="4Ts-6d-SfZ" userLabel="Fetch">
                                <color key="tintColor" red="0.99215692280000001" green="0.99215680360000003" blue="0.99215680360000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <connections>
                                    <action selector="fetchRecipesPressed:" destination="GCI-CF-1m4" id="Xf6-Nt-o71"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Item" image="xmark.bin" catalog="system" id="l79-Av-Ueo" userLabel="Delete">
...
