...
            destinationVC.selectedRecipeImage = self.tryRecipeImage
        }
    }
    
    @IBAction func DeleteAllButtonPressed(_ sender: UIBarButtonItem) {
        
        let deleteAlert = UIAlertController(title: "Remove all Recipes ?", message: "", preferredStyle: UIAlertController.Style.alert)
        deleteAlert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { [self] (action: UIAlertAction!) in
            
//            self?.idArray.removeAll()
//            RecipesStore.updateUserDefaults(Constants.keyForBookmarkedRecipes, self?.idArray ?? [Int]())
//            self?.tableView.reloadData()
            
            self.idArray.removeAll()
...
