...
    //to avoid duplicate ingredients
    var ingredientSet = Set<String>()
    @IBOutlet weak var tableView: UITableView!
    var selectedRecipeIngredients = [String]()
    var selectedRecipeInstructions = [String]()
    
    let tableSectionHeaders = ["Ingredients", "Instructions"]
    var selectedRecipeID : Int?
    var selecetedRecipeTitle: String?
    var selectedRecipeImage: String?
    
    func completeURL() -> String {
        return "https://api.spoonacular.com/recipes/\(selectedRecipeID!)/analyzedInstructions?apiKey=\(Constants.apiKey1Kun)"
...
